[metadata]
name = chatstream
version = attr: chatstream.__version__
author = Winston Chang
author_email = winston@posit.co
url = https://github.com/rstudio/chatstream
description = An AI chat module for Shiny for Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.9
packages = find:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
    shiny>=0.3.3
    openai>=1.13.3;platform_system!="Emscripten"
    tiktoken
tests_require =
    pytest>=3
zip_safe = False

[options.extras_require]
dev =
    black>=23.1.0
    flake8>=6.0.0
    isort>=5.10.1
    pyright>=1.1.244
    wheel

[options.packages.find]
include = chatstream, chatstream.*

[options.package_data]
chatstream = py.typed

[flake8]
# E302: Expected 2 blank lines
# E501: Line too long
# W503: Line break occurred before a binary operator
# E731: Do not assign a lambda expression, use a def
ignore = E302, E501, W503, E731
extend_exclude = docs, .venv, venv, typings, build

[isort]
profile=black
skip=
    __init__.py
    typings/
    .venv
    venv
    .tox
    build
